Fix: changed img aspects & hid scrollbar

--- a/frontend/src/app/dashboard/song/song-card/song-card.component.scss
+++ b/frontend/src/app/dashboard/song/song-card/song-card.component.scss
@@ -10,7 +10,8 @@ $text-size: 0.9rem;
 }
 .song-card-img{
   border-radius: 0.5rem;
-  width: 120px;
+  width: 160px;
+  height: 90px;
   min-width: 70px;
 }
 .card-in-playlist{
